Fix YuCLI runtime and safety regressions